Add Google site verification to index.html
Add Google site verification meta tag.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/robotjellyfish/CatrinaStoner/refs/heads/main/icon.png"/>
 
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Fjalla+One&family=Amarante&display=swap" rel="stylesheet">
-
+<meta name="google-site-verification" content="SSo2oFozpNKCeAscXm0niMqnjK3kr2QC8s32JFNFEdc" />
+  
   <style>
     :root {
       --text-main: #f9f9f9;
