--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
 <main class="container">
   <!-- TITLE -->
   <section class="title-section">
-    <h1>CATRINA•STONER</h1>
+    <h1>CATRINA STONER</h1>
   </section>
   <!-- PROFILE -->
   <img src="https://raw.githubusercontent.com/robotjellyfish/CatrinaStoner/refs/heads/main/headshot%20(1).png"
